[tool.poetry]
name = "wikipya"
version = "4.0.1.post2"
description = "A simple async python library for search pages and images in wikis"
authors = ["Daniel Zakharov <daniel734@bk.ru>"]
license = "MIT"
readme = "README.md"

# homepage = "https://python-poetry.org/"
repository = "https://github.com/jDan735/wikipya"
keywords = ["api", "wikipedia", "mediawiki", "asyncio"]

[tool.poetry.dependencies]
python = "^3.9"
httpx = "^0.21.2"
beautifulsoup4 = "^4.10.0"
tghtml = "^1.0.6"
pydantic = "^1.9.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pytest-lazy-fixture = "^0.6.3"
pytest-asyncio = "^0.16.0" 

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
