[tool.poetry]
name = "wikipya"
version = "4.0.7"
description = "A simple async python library for search pages and images in wikis"
authors = ["Daniel Zakharov <gzdan734@gmail.com>"]
license = "MIT"
readme = "README.md"

repository = "https://github.com/jDan735/wikipya"
keywords = ["api", "wikipedia", "mediawiki", "asyncio"]

[tool.poetry.dependencies]
python = "^3.10"
httpx = "^0.21.2"
beautifulsoup4 = "^4.10.0"
tghtml = "1.1.4"
pydantic = "^2.6.3"


[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pytest-lazy-fixture = "^0.6.3"
pytest-asyncio = "^0.16.0" 

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
