[project]
name = "wikipya"
version = "4.1.2"
description = "A simple async python library for search pages and images in wikis"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Daniel Zakharov", email = "gzdan734@gmail.com" }
]
dependencies = [
    "beautifulsoup4>=4.14.2",
    "httpx>=0.28.1",
    "pydantic>=2.5.3,<2.9.0",
    "tghtml>=1.1.5",
    "h2>=4.3.0"
]

[tool.pytest.ini_options]
addopts = "-p no:warnings"
norecursedirs = ".svn _build tmp*"
testpaths = "tests"